# EnvironmentalAwareReferentialUnit

./: .gitignore  .ruff.toml  EARU.py  EARUruntime.log.old  LICENSE  PHYSICS_AND_ASSUMPTIONS.md  README.md  SensorTerminalMonitor.py  SensorTerminalMonitor_snippet.py  TestSuite.sh  check.json  com.earu.service.plist  debug.json  error_line.txt  howtoread_EARU_data.dat.md  imu_reader.py  log_rotator.py  pages_83_100.txt  pfd_viz.py  pyproject.toml  restart_service.sh  root_proxy.py  runEARUDaemon.sh  run_daemon.sh  start.sh  sudo_proxy  sudo_proxy.mm  test.json  test_atof.adb  test_shm  test_shm.c  test_shm.py  unlink_shm  unlink_shm.c  validate_parity.sh  verify_hash.py
EARU_LegacyPython/: pfd_viz_old.py  test_shm  test_shm.c
EARU_Tasks/: example.py  keyboard_experiment.py  keyboard_experiment.txt
EARU_daemon/: .gitignore  .source_hash  alire.toml  b__test_parse.adb  b__test_parse.ads  build_err.txt  b~print_offsets.adb  b~print_offsets.ads  b~print_offsets.ali  b~test.adb  b~test.ads  b~test_ada_hid.adb  b~test_ada_hid.ads  b~test_atof.adb  b~test_atof.ads  b~test_exec.adb  b~test_exec.ads  b~test_parse.adb  b~test_parse.ads  b~test_sensor.adb  b~test_sensor.ads  earu-shm.ali  earu.ali  earu_daemon.gpr  fuzz_test.adb  print_offsets.ali  scratch_research.txt  test.adb  test_atof.adb  test_atof.gpr  test_exec.adb  test_parse.adb  test_parse.adb.stderr  test_parse.bexch  test_parse.gpr  test_parse2.adb  test_parse2.gpr  test_sensor.adb
earu/: __init__.py  _spu.py
util/: SensorTerminalMonitor.py  check_quality.sh  cleanup_ramdisks.py  cleanup_ramdisks.sh  (+4 more)
(+50 files in other folders)
