[project]
name = "EnvironmentalAwareReferentialUnit"
version = "0.2.0"
license = "MIT"
description = "A2779 Sensors and Augmented Sensors: read the undocumented mems accelerometer + gyroscope on apple silicon macs via iokit hid"
authors = [
    { name = "Olivier Bourbonnais", email = "olvvier.b@gmail.com" },
    { name = "Albert Starfield Wahyu Suryo Samudro", email = "albertstarfield2001@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/olvvier/EnvironmentalAwareReferentialUnit"

[project.optional-dependencies]
demo = ["PyWavelets>=1.4"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["earu*"]
